--- a/experimental/higepon/scheme/src/Makefile.am
+++ b/experimental/higepon/scheme/src/Makefile.am
@@ -1,2 +1,16 @@
 bin_PROGRAMS = scheme
-scheme_SOURCES = main.cpp
+scheme_SOURCES = \
+main.cpp\
+Object.cpp\
+Object.h\
+Number.cpp\
+Number.h\
+String.cpp\
+String.h\
+Quote.cpp\
+Quote.h\
+Variable.cpp\
+Variable.h\
+Assignment.cpp\
+Assignment.h
+
