--- a/experimental/file_server_on_linux/src/Makefile.am
+++ b/experimental/file_server_on_linux/src/Makefile.am
@@ -23,4 +23,8 @@ VnodeManager.cpp\
 FileServer.h\
 FileServer.cpp\
 ISO9660/ISO9660FileSystem.cpp\
-ISO9660/ISO9660FileSystem.h
+ISO9660/ISO9660FileSystem.h\
+ISO9660/ISO9660.h\
+Process/ProcessFileSystem.cpp\
+Process/ProcessFileSystem.h
+
