--- a/experimental/file_server_on_linux/src/Makefile.in
+++ b/experimental/file_server_on_linux/src/Makefile.in
@@ -56,7 +56,8 @@ am_file_server_OBJECTS = file_server-IDEDriver.$(OBJEXT) \
 	file_server-ProcessUtil.$(OBJEXT) file_server-main.$(OBJEXT) \
 	file_server-vnode.$(OBJEXT) file_server-VnodeManager.$(OBJEXT) \
 	file_server-FileServer.$(OBJEXT) \
-	file_server-ISO9660FileSystem.$(OBJEXT)
+	file_server-ISO9660FileSystem.$(OBJEXT) \
+	file_server-ProcessFileSystem.$(OBJEXT)
 file_server_OBJECTS = $(am_file_server_OBJECTS)
 file_server_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
@@ -177,7 +178,10 @@ VnodeManager.cpp\
 FileServer.h\
 FileServer.cpp\
 ISO9660/ISO9660FileSystem.cpp\
-ISO9660/ISO9660FileSystem.h
+ISO9660/ISO9660FileSystem.h\
+ISO9660/ISO9660.h\
+Process/ProcessFileSystem.cpp\
+Process/ProcessFileSystem.h
 
 all: all-am
 
@@ -322,6 +326,12 @@ file_server-ISO9660FileSystem.o: ISO9660/ISO9660FileSystem.cpp
 
 file_server-ISO9660FileSystem.obj: ISO9660/ISO9660FileSystem.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(file_server_CXXFLAGS) $(CXXFLAGS) -c -o file_server-ISO9660FileSystem.obj `if test -f 'ISO9660/ISO9660FileSystem.cpp'; then $(CYGPATH_W) 'ISO9660/ISO9660FileSystem.cpp'; else $(CYGPATH_W) '$(srcdir)/ISO9660/ISO9660FileSystem.cpp'; fi`
+
+file_server-ProcessFileSystem.o: Process/ProcessFileSystem.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(file_server_CXXFLAGS) $(CXXFLAGS) -c -o file_server-ProcessFileSystem.o `test -f 'Process/ProcessFileSystem.cpp' || echo '$(srcdir)/'`Process/ProcessFileSystem.cpp
+
+file_server-ProcessFileSystem.obj: Process/ProcessFileSystem.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(file_server_CXXFLAGS) $(CXXFLAGS) -c -o file_server-ProcessFileSystem.obj `if test -f 'Process/ProcessFileSystem.cpp'; then $(CYGPATH_W) 'Process/ProcessFileSystem.cpp'; else $(CYGPATH_W) '$(srcdir)/Process/ProcessFileSystem.cpp'; fi`
 uninstall-info-am:
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
