--- a/experimental/file_server_on_linux/src/Makefile.am
+++ b/experimental/file_server_on_linux/src/Makefile.am
@@ -2,7 +2,7 @@
 # export GLIBCXX_FORCE_NEW = 1
 
 bin_PROGRAMS = file_server
-file_server_CXXFLAGS = -DON_LINUX -g -Wall -O3
+file_server_CXXFLAGS = -DON_LINUX -g -Wall -O3 -I ../../../mona/tool/
 file_server_SOURCES = \
 FileSystem.h\
 IDEDriver.cpp\
@@ -30,5 +30,9 @@ ISO9660/ISO9660FileSystem.h\
 ISO9660/ISO9660.h\
 FAT12/FAT12FileSystem.cpp\
 FAT12/FAT12FileSystem.h\
+FAT12/FDCDriver.cpp\
+FAT12/FDCDriver.h\
+FAT12/fat.cpp\
+FAT12/endian_util.cpp\
 Process/ProcessFileSystem.cpp\
 Process/ProcessFileSystem.h
