--- a/experimental/higepon/scheme/src/Makefile.am
+++ b/experimental/higepon/scheme/src/Makefile.am
@@ -39,6 +39,9 @@ Node.cpp\
 Node.h\
 Translator.cpp\
 Translator.h\
+PrimitiveProcedure.h\
+PrimitiveProcedures/Plus.cpp\
+PrimitiveProcedures/Plus.h\
 scheme.h\
 scheme.cpp\
 load.cpp
