--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -1,3 +1,8 @@
+ifndef $(MONADIR)
+@echo "MONADIR set to default"
+export MONADIR=$(PWD)/../mona
+endif
+
 all:
 # basic libraries
 	cd Devel/stlport && make install
