--- a/experimental/higepon/scheme/src/Makefile.am
+++ b/experimental/higepon/scheme/src/Makefile.am
@@ -56,6 +56,12 @@ PrimitiveProcedures/Cdr.cpp\
 PrimitiveProcedures/Cdr.h\
 PrimitiveProcedures/Display.cpp\
 PrimitiveProcedures/Display.h\
+PrimitiveProcedures/StringP.cpp\
+PrimitiveProcedures/StringP.h\
+PrimitiveProcedures/NumberP.cpp\
+PrimitiveProcedures/NumberP.h\
+PrimitiveProcedures/StringToNumber.cpp\
+PrimitiveProcedures/StringToNumber.h\
 scheme.h\
 scheme.cpp\
 load.cpp
