--- a/experimental/higepon/scheme/src/Makefile.in
+++ b/experimental/higepon/scheme/src/Makefile.in
@@ -56,6 +56,7 @@ am_scheme_OBJECTS = main.$(OBJEXT) Object.$(OBJEXT) Number.$(OBJEXT) \
 	Application.$(OBJEXT) Parser.$(OBJEXT) Tokenizer.$(OBJEXT) \
 	Node.$(OBJEXT) Translator.$(OBJEXT) Plus.$(OBJEXT) \
 	Cons.$(OBJEXT) Car.$(OBJEXT) Cdr.$(OBJEXT) Display.$(OBJEXT) \
+	StringP.$(OBJEXT) NumberP.$(OBJEXT) StringToNumber.$(OBJEXT) \
 	scheme.$(OBJEXT) load.$(OBJEXT)
 scheme_OBJECTS = $(am_scheme_OBJECTS)
 scheme_LDADD = $(LDADD)
@@ -202,6 +203,12 @@ PrimitiveProcedures/Cdr.cpp\
 PrimitiveProcedures/Cdr.h\
 PrimitiveProcedures/Display.cpp\
 PrimitiveProcedures/Display.h\
+PrimitiveProcedures/StringP.cpp\
+PrimitiveProcedures/StringP.h\
+PrimitiveProcedures/NumberP.cpp\
+PrimitiveProcedures/NumberP.h\
+PrimitiveProcedures/StringToNumber.cpp\
+PrimitiveProcedures/StringToNumber.h\
 scheme.h\
 scheme.cpp\
 load.cpp
@@ -307,6 +314,24 @@ Display.o: PrimitiveProcedures/Display.cpp
 
 Display.obj: PrimitiveProcedures/Display.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o Display.obj `if test -f 'PrimitiveProcedures/Display.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/Display.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/Display.cpp'; fi`
+
+StringP.o: PrimitiveProcedures/StringP.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o StringP.o `test -f 'PrimitiveProcedures/StringP.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/StringP.cpp
+
+StringP.obj: PrimitiveProcedures/StringP.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o StringP.obj `if test -f 'PrimitiveProcedures/StringP.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/StringP.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/StringP.cpp'; fi`
+
+NumberP.o: PrimitiveProcedures/NumberP.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o NumberP.o `test -f 'PrimitiveProcedures/NumberP.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/NumberP.cpp
+
+NumberP.obj: PrimitiveProcedures/NumberP.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o NumberP.obj `if test -f 'PrimitiveProcedures/NumberP.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/NumberP.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/NumberP.cpp'; fi`
+
+StringToNumber.o: PrimitiveProcedures/StringToNumber.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o StringToNumber.o `test -f 'PrimitiveProcedures/StringToNumber.cpp' || echo '$(srcdir)/'`PrimitiveProcedures/StringToNumber.cpp
+
+StringToNumber.obj: PrimitiveProcedures/StringToNumber.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o StringToNumber.obj `if test -f 'PrimitiveProcedures/StringToNumber.cpp'; then $(CYGPATH_W) 'PrimitiveProcedures/StringToNumber.cpp'; else $(CYGPATH_W) '$(srcdir)/PrimitiveProcedures/StringToNumber.cpp'; fi`
 uninstall-info-am:
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
